# content-aware-resize

./: .gitignore  CMakeLists.txt  README  README.md  config  configuration
config/: CMakeLists.txt  config.cpp
core/: CMakeLists.txt  core.cpp
cui/: CMakeLists.txt  console.cpp  useful_funcitons_RENAME.cpp
devdoc/: devdoc.aux  devdoc.tex  header.sty
filters/: CMakeLists.txt  filters.cpp
gui/: CMakeLists.txt  imageviewer.cpp  uxinar.cpp
include/: config.h  core.h  filters.h  imageviewer.h  img_preprocess.h  img_resize.h  interface.h  io.h  matrixwrapper.h  resizable_label.h  singleton.h  types.h  utils.h  xinar.h
include_apps/: config.h  io.h  utils.h
include_xinar/: filters.h  matrixwrapper.h  xinar.h
interface/: CMakeLists.txt  interface.cpp
old_structure/include/: img_show.h
old_structure/src/: CMakeLists.txt  img_preprocess.cpp  parameters.cpp
old_structure/src/CUI/: main.cpp
old_structure/src/GUI/: CMakeLists.txt
src/: CMakeLists.txt  img_preprocess.cpp  img_resize.cpp
src/CUI/: CMakeLists.txt  main.cpp
src/GUI/: CMakeLists.txt
src/core/: CMakeLists.txt  core.cpp  matrixwrapper.cpp
src/cui/: CMakeLists.txt  arghandle.cpp  console.cpp  console_handler.cpp  cui.cpp  useful_funcitons_RENAME.cpp
src/filters/: CMakeLists.txt  filters.cpp
src/gui/: CMakeLists.txt  uxinar.cpp
src/include/: config.h  core.h  filters.h  io.h  resizable_label.h  types.h  utils.h
src/interface/: CMakeLists.txt  interface.cpp  xinar.cpp
src/utils/: CMakeLists.txt  config.cpp  io.cpp  matrixwrapper.cpp  radix.cpp  ui_components.cpp  utils.cpp
src_apps/: CMakeLists.txt
src_apps/cui/: CMakeLists.txt  console_handler.cpp  cui.cpp  cxinar  useful_funcitons_RENAME.cpp
src_apps/gui/: CMakeLists.txt
src_apps/utils/: CMakeLists.txt  config.cpp  io.cpp  ui_components.cpp  utils.cpp
src_xinar/: CMakeLists.txt
src_xinar/core/: CMakeLists.txt  core.cpp  matrixwrapper.cpp
src_xinar/filters/: CMakeLists.txt  filters.cpp
src_xinar/interface/: CMakeLists.txt  resizer.cpp
tests/: CMakeLists.txt  core_test.cpp  test_core
tests/test_build/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt  io.cpp  matrixwrapper.cpp  radix.cpp  singleton.cpp  ui_components.cpp
